--- a/src/app/modules/dashboard/map/map.component.html
+++ b/src/app/modules/dashboard/map/map.component.html
@@ -1,5 +1,5 @@
-<section>
-  <div class="text-center mb-3">
+<section class="border-1 border-200">
+  <div class="text-center mb-3 pt-4">
     <div class="text-xl font-semibold">Map Analysis</div>
     <div class="text-sm">
       To see a list of distributors for your area, please click on your location
@@ -7,12 +7,47 @@
     </div>
   </div>
 
-  <div class="w-full h-30rem overflow-hidden">
-    <div
-      class="h-full bg-white"
-      leaflet
-      (leafletMapReady)="onMapReady($event)"
-      [leafletOptions]="options"
-    ></div>
-  </div>
+  <spinner [spinning]="this.isLoadingArticles">
+    <div class="w-full h-30rem overflow-hidden">
+      <div
+        class="h-full bg-white"
+        leaflet
+        (leafletMapReady)="onMapReady($event)"
+        [leafletOptions]="options"
+      ></div>
+    </div>
+  </spinner>
+
+  <ng-container *ngIf="selectedLoc">
+    <spinner [spinning]="this.isLoadingArticles">
+      <div class="bg-primary py-5 px-6 mt-4">
+        <div class="text-center font-semibold text-xl pb-4">
+          Article of {{ selectedLoc }}
+        </div>
+
+        <p-divider></p-divider>
+
+        <div class="grid py-4 row-gap-3">
+          <div
+            
+            (click)="navigateInsideZone()"
+            class="col-3 flex gap-2 text-sm cursor-pointer"
+            *ngFor="let article of articles"
+          >
+            <div>
+              <icon-newspaper
+                fill="white"
+                [width]="18"
+                [height]="18"
+              ></icon-newspaper>
+            </div>
+            <div>
+              <div>{{ article.datee }}</div>
+              <div class="font-semibold">{{ article.media_name }}</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </spinner>
+  </ng-container>
 </section>
