--- a/src/app/modules/dashboard/preference/sub-category-list/sub-category-list.component.html
+++ b/src/app/modules/dashboard/preference/sub-category-list/sub-category-list.component.html
@@ -88,7 +88,7 @@
           </tr>
         </ng-template>
       </p-table>
-      <p-paginator
+      <!-- <p-paginator
         (onPageChange)="onPageChange($event)"
         [first]="first"
         [rows]="rows"
@@ -104,7 +104,7 @@
             }}</span></span
           >
         </ng-template>
-      </p-paginator>
+      </p-paginator> -->
     </div>
   </div>
 </div>
