--- a/src/app/modules/dashboard/social-media-overview/social-media-overview.component.html
+++ b/src/app/modules/dashboard/social-media-overview/social-media-overview.component.html
@@ -30,43 +30,51 @@
     *ngIf="chartDetails.title">
     <spinner [spinning]="isLoading">
       <div class="app-card flex flex-column gap-4 p-4">
-        <div class="text-sm font-semibold">{{ chartDetailsLabel }}</div>
+        <span class="text-sm font-semibold">{{ chartDetailsLabel }}</span>
 
-        <div class="flex flex-column w-full h-full gap-3" *ngIf="chartDetails.mentionsData?.length">
-          <div
-            *ngFor="let item of chartDetails.mentionsData; let i = index"
-            class="flex w-full h-full align-items-center gap-4 pt-3"
-            [ngClass]="{ 'border-top-1 border-200': i !== 0 }">
-            <img
-              [src]="item.thumbnailUrl"
-              [alt]="item.title"
-              class="h-5rem w-5rem"
-              style="object-fit: cover"
-              imgFallback="https://placehold.co/600x400?text=No+Image+Available" />
+        <div class="flex flex-column w-full h-full gap-3">
+          <ng-container *ngIf="chartDetails.mentionsData?.length; else empty">
+            <div
+              *ngFor="let item of chartDetails.mentionsData; let i = index"
+              class="flex w-full h-full align-items-center gap-4 pt-3"
+              [ngClass]="{ 'border-top-1 border-200': i !== 0 }">
+              <img
+                [src]="item.thumbnailUrl"
+                [alt]="item.title"
+                class="h-5rem w-5rem"
+                style="object-fit: cover"
+                imgFallback="https://placehold.co/600x400?text=No+Image+Available" />
 
-            <div class="flex flex-column justify-content-between w-full h-full">
-              <div class="flex flex-column">
-                <div class="text-sm font-semibold white-space-nowrap text-overflow-ellipsis overflow-hidden">
-                  {{ item.title }}
-                </div>
-                <p class="white-space-nowrap overflow-hidden text-overflow-ellipsis p-0 mt-2">
-                  {{ item.content }}
-                </p>
-                <div class="flex gap-3 align-items-center justify-content-between">
-                  <div class="flex align-items-center gap-2 cursor-pointer" (click)="onClickChartDetails(item)">
-                    <i class="pi pi-globe text-500 text-xs"></i>
-                    <span class="text-xs text-500 p-0 mt-0 white-space-nowrap overflow-hidden text-overflow-ellipsis">
-                      {{ item.url }}
-                    </span>
+              <div class="flex flex-column justify-content-between w-full h-full">
+                <div class="flex flex-column">
+                  <div class="text-sm font-semibold white-space-nowrap text-overflow-ellipsis overflow-hidden">
+                    {{ item.title }}
                   </div>
-                  <div class="flex align-items-center gap-2">
-                    <i class="pi pi-clock text-500 text-xs"></i>
-                    <span class="text-xs text-500 p-0 mt-0">{{ item.createdAt }}</span>
+                  <p class="white-space-nowrap overflow-hidden text-overflow-ellipsis p-0 mt-2">
+                    {{ item.content }}
+                  </p>
+                  <div class="flex gap-3 align-items-center justify-content-between">
+                    <div class="flex align-items-center gap-2 cursor-pointer" (click)="onClickChartDetails(item)">
+                      <i class="pi pi-globe text-500 text-xs"></i>
+                      <span class="text-xs text-500 p-0 mt-0 white-space-nowrap overflow-hidden text-overflow-ellipsis">
+                        {{ item.url }}
+                      </span>
+                    </div>
+                    <div class="flex align-items-center gap-2">
+                      <i class="pi pi-clock text-500 text-xs"></i>
+                      <span class="text-xs text-500 p-0 mt-0">{{ item.createdAt }}</span>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
+          </ng-container>
+
+          <ng-template #empty>
+            <div class="text-center w-full py-4" *ngIf="!isLoading">
+              <span class="text-sm">No data.</span>
+            </div>
+          </ng-template>
         </div>
 
         <p-paginator
